@@ -1621,6 +1621,9 @@ void generate_text_internal(char *p, int p_max_size,
 			OBJ(pid_openfiles) {
 				print_pid_openfiles(obj, p, p_max_size);
 			}
+			OBJ(pid_state) {
+				print_pid_state(obj, p, p_max_size);
+			}
 			OBJ(pid_stderr) {
 				print_pid_stderr(obj, p, p_max_size);
 			}
