@@ -30,6 +30,7 @@
 
 #define PROCDIR	"/proc"
 #define READERR	"Can't read '%s'"
+#define STATENOTFOUND	"Can't find the process state in '%s'"
 
 struct environ_data {
 	char *file;
@@ -55,6 +56,9 @@ void print_pid_environ_list(struct text_object *obj, char *p, int p_max_size);
 
 void scan_pid_exe_arg(struct text_object *obj, const char *arg, void* free_at_crash);
 void print_pid_exe(struct text_object *obj, char *p, int p_max_size);
+
+void scan_pid_state_arg(struct text_object *obj, const char *arg, void* free_at_crash);
+void print_pid_state(struct text_object *obj, char *p, int p_max_size);
 
 void scan_pid_stderr_arg(struct text_object *obj, const char *arg, void* free_at_crash);
 void print_pid_stderr(struct text_object *obj, char *p, int p_max_size);
